@@ -94,9 +94,8 @@ class Tx_Standorte_Controller_BibliothekController extends Tx_Extbase_MVC_Contro
 	 * @param Tx_Standorte_Domain_Model_Bibliothek $bibliothek
 	 */
 	public function singleAction(Tx_Standorte_Domain_Model_Bibliothek $bibliothek) {
-		$newHeader = $bibliothek->getTitel() . ' - ' . $this->configurationManager->getContentObject()->data['header'];
 					// Assign new pageTitle
-		$GLOBALS['TSFE']->page['title'] = $newHeader;
+		$GLOBALS['TSFE']->page['title'] = $bibliothek->getTitel();
 		$this->view->assign('bibo', $bibliothek);
 	}
 
