@@ -24,7 +24,7 @@
 			<label index="mailtitle">Kontakt per E-Mail</label>
 			<label index="institutstitle">Katalog der Bibliothek</label>
 			<label index="guktitle">Göttinger Universitätskatalog</label>
-			<label index="biblink">Link zu</label>
+			<label index="biblink">Link</label>
 		</languageKey>
 		<languageKey index="en" type="array">
 			<label index="oeffnung">Opening-Hours</label>
@@ -44,7 +44,7 @@
 			<label index="mailtitle">Kontakt per E-Mail</label>
 			<label index="institutstitle">Katalog der Bibliothek</label>
 			<label index="guktitle">Göttinger Universitätskatalog</label>
-			<label index="biblink">Link to</label>
+			<label index="biblink">Link</label>
 		</languageKey>
 	</data>
 </T3locallang>
