@@ -1,5 +1,7 @@
 2012-03-05 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Titel der Detailseiten geaendert (WWW-1103)
+	* Linkbezeichnung geaendert (WWW-1102)
+	* Manual aktualisiert
 
 2012-02-01 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Layout der Einzelansicht verbessert (WWW-1102)
